Fixing bug 203345. Making image maps work correctly in XHTML documents. r=heikki@netscape.com, sr=bzbarsky@mit.edu